hphp/hack/test/typecheck/reified_generics/incorrect-num-reified-extends-1.php
<?hh

class C<reify T> {}
class D<reify T> extends C<T, int> {}

function f(): void {
  new D<int>();
}
